[project]
name = "agentenv-langchain"
version = "0.1.0"
description = "LangChain tool wrapper for AgentGym environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
openai = [
    "langchain-openai>=0.1.0",
]
anthropic = [
    "langchain-anthropic>=0.1.0",
]
all = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentenv_langchain"]

[project.scripts]
agentenv-langchain = "agentenv_langchain.cli:main"
