[project]
name = "agentenv-mcp"
version = "0.1.0"
description = "Simulated Model Context Protocol (MCP) server environment for AgentGym"
authors = [
    {name = "AgentGym Contributors"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "gymnasium>=0.29.0",
    "requests>=2.31.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mcp = "agentenv_mcp.mcp_launch:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
