[project]
name = "agentenv-wrapper"
version = "0.1.0"
description = "Generic tool-based wrapper for AgentGym environments - enables LangChain and other agent frameworks to interact with AgentEnv"
authors = [{ name = "AgentGym Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentenv_wrapper"]

[tool.ruff]
line-length = 100
target-version = "py310"
